// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`simple registrar users should be able to properly register a name 1`] = `
Object {
  "accounts": Object {
    "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0": Object {
      "address": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
      "balance": -738070n,
      "code": undefined,
      "init": Array [
        Object {
          "type": "ByStr20",
          "value": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
          "vname": "registry",
        },
        Object {
          "type": "ByStr32",
          "value": "0x0000000000000000000000000000000000000000000000000000000000000000",
          "vname": "ownedNode",
        },
        Object {
          "type": "ByStr20",
          "value": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
          "vname": "owner",
        },
        Object {
          "type": "Uint128",
          "value": "1",
          "vname": "price",
        },
        Object {
          "type": "BNum",
          "value": "0",
          "vname": "_creation_block",
        },
        Object {
          "type": "Uint32",
          "value": "0",
          "vname": "_scilla_version",
        },
        Object {
          "type": "ByStr20",
          "value": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
          "vname": "_this_address",
        },
      ],
      "input": "/Users/laptop3/ZilliqaNameService/contracts/scilla/simple_registrar.scilla",
      "state": Array [
        Object {
          "type": "Uint128",
          "value": "1",
          "vname": "_balance",
        },
      ],
    },
    "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8": Object {
      "address": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "balance": -892756n,
      "code": undefined,
      "init": Array [
        Object {
          "type": "ByStr20",
          "value": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
          "vname": "initialOwner",
        },
        Object {
          "type": "BNum",
          "value": "0",
          "vname": "_creation_block",
        },
        Object {
          "type": "Uint32",
          "value": "0",
          "vname": "_scilla_version",
        },
        Object {
          "type": "ByStr20",
          "value": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
          "vname": "_this_address",
        },
      ],
      "input": "/Users/laptop3/ZilliqaNameService/contracts/scilla/registry.scilla",
      "state": Array [
        Object {
          "type": "Uint128",
          "value": "0",
          "vname": "_balance",
        },
        Object {
          "type": "Map (ByStr32) (Record)",
          "value": Array [
            Object {
              "key": "0x75d7fb79d628a67a623235349c36992c89624fd6ec37ef5e1f3b9ba2bce1052d",
              "val": Object {
                "argtypes": Array [],
                "arguments": Array [
                  "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
                  "0x0000000000000000000000000000000000000000",
                ],
                "constructor": "Record",
              },
            },
            Object {
              "key": "0x0000000000000000000000000000000000000000000000000000000000000000",
              "val": Object {
                "argtypes": Array [],
                "arguments": Array [
                  "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
                  "0x0000000000000000000000000000000000000000",
                ],
                "constructor": "Record",
              },
            },
          ],
          "vname": "records",
        },
        Object {
          "type": "Map (ByStr32) (ByStr20)",
          "value": Array [
            Object {
              "key": "0x0000000000000000000000000000000000000000000000000000000000000000",
              "val": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
            },
          ],
          "vname": "approvals",
        },
        Object {
          "type": "Map (ByStr20) (List (ByStr20))",
          "value": Array [],
          "vname": "operators",
        },
        Object {
          "type": "List (ByStr20)",
          "value": Array [],
          "vname": "admins",
        },
      ],
    },
    "0xa56193e39780d268b02bf5d9387179cc7ac9884b": Object {
      "address": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "balance": 999999979094763n,
      "smartContracts": Array [
        "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
        "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
      ],
      "transactions": Array [
        "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5",
        "0x2199c041141afe9e4de9d1900a28c3659538073b66d0eedb53525a3afb142627",
        "0xc6a0ee971806205e155c2229b34fb4c60e146da684005e8618cf5b1eb04c3082",
        "0x303a0942b8338bb0ce7555926b8d44a2936b9d40a3d2ddea35100509a76364a6",
      ],
    },
  },
  "blockNumber": 0,
  "blocks": Array [],
  "currentBlock": Array [
    "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5",
    "0x2199c041141afe9e4de9d1900a28c3659538073b66d0eedb53525a3afb142627",
    "0xc6a0ee971806205e155c2229b34fb4c60e146da684005e8618cf5b1eb04c3082",
    "0x303a0942b8338bb0ce7555926b8d44a2936b9d40a3d2ddea35100509a76364a6",
  ],
  "events": Object {
    "0x1055e3f83f380244ae2ba92a2f4b3cc5d0dd814e27954321cee3bf824b5929a6": Object {
      "_eventname": "Transfered",
      "address": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "params": Array [
        Object {
          "type": "ByStr32",
          "value": "0x75d7fb79d628a67a623235349c36992c89624fd6ec37ef5e1f3b9ba2bce1052d",
          "vname": "node",
        },
        Object {
          "type": "ByStr20",
          "value": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
          "vname": "owner",
        },
      ],
    },
    "0xb91b1fd99e7c72ffe1c5f71e96c011481f09eb53bde54b2830829f587529b1b3": Object {
      "_eventname": "NewDomain",
      "address": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "params": Array [
        Object {
          "type": "ByStr32",
          "value": "0x0000000000000000000000000000000000000000000000000000000000000000",
          "vname": "parent",
        },
        Object {
          "type": "String",
          "value": "label",
          "vname": "label",
        },
      ],
    },
    "0xe28330792789071f66770eb479dd457eaf7e2911f6d2ca94cbe02d6e9a445029": Object {
      "_eventname": "Approved",
      "address": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "params": Array [
        Object {
          "type": "ByStr20",
          "value": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
          "vname": "address",
        },
      ],
    },
  },
  "transactions": Object {
    "0x2199c041141afe9e4de9d1900a28c3659538073b66d0eedb53525a3afb142627": Object {
      "ID": "0x2199c041141afe9e4de9d1900a28c3659538073b66d0eedb53525a3afb142627",
      "amount": "0",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "100000",
      "gasPrice": "100",
      "meta": Object {
        "contractAddress": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
      },
      "nonce": "2",
      "receipt": Object {
        "cumulative_gas": "9902853",
        "epoch_num": "1",
        "success": true,
      },
      "toAddr": "0x0000000000000000000000000000000000000000",
      "version": "30134273",
    },
    "0x303a0942b8338bb0ce7555926b8d44a2936b9d40a3d2ddea35100509a76364a6": Object {
      "ID": "0x303a0942b8338bb0ce7555926b8d44a2936b9d40a3d2ddea35100509a76364a6",
      "amount": "1",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "10000",
      "gasPrice": "100",
      "meta": Object {
        "events": Array [
          "0x1055e3f83f380244ae2ba92a2f4b3cc5d0dd814e27954321cee3bf824b5929a6",
          "0xb91b1fd99e7c72ffe1c5f71e96c011481f09eb53bde54b2830829f587529b1b3",
        ],
      },
      "nonce": "4",
      "receipt": Object {
        "cumulative_gas": "3671",
        "epoch_num": "3",
        "success": true,
      },
      "toAddr": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "version": "30134273",
    },
    "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5": Object {
      "ID": "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5",
      "amount": "0",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "100000",
      "gasPrice": "100",
      "meta": Object {
        "contractAddress": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      },
      "nonce": "1",
      "receipt": Object {
        "cumulative_gas": "9911759",
        "epoch_num": "0",
        "success": true,
      },
      "toAddr": "0x0000000000000000000000000000000000000000",
      "version": "30134273",
    },
    "0xc6a0ee971806205e155c2229b34fb4c60e146da684005e8618cf5b1eb04c3082": Object {
      "ID": "0xc6a0ee971806205e155c2229b34fb4c60e146da684005e8618cf5b1eb04c3082",
      "amount": "0",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "1000",
      "gasPrice": "100",
      "meta": Object {
        "events": Array [
          "0xe28330792789071f66770eb479dd457eaf7e2911f6d2ca94cbe02d6e9a445029",
        ],
      },
      "nonce": "3",
      "receipt": Object {
        "cumulative_gas": "626",
        "epoch_num": "2",
        "success": true,
      },
      "toAddr": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "version": "30134273",
    },
  },
}
`;

exports[`simple registrar users should fail to register a name if already owned 1`] = `
Object {
  "accounts": Object {
    "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0": Object {
      "address": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
      "balance": 0n,
      "code": undefined,
      "init": Array [
        Object {
          "type": "ByStr20",
          "value": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
          "vname": "registry",
        },
        Object {
          "type": "ByStr32",
          "value": "0x0000000000000000000000000000000000000000000000000000000000000000",
          "vname": "ownedNode",
        },
        Object {
          "type": "ByStr20",
          "value": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
          "vname": "owner",
        },
        Object {
          "type": "Uint128",
          "value": "1",
          "vname": "price",
        },
        Object {
          "type": "BNum",
          "value": "0",
          "vname": "_creation_block",
        },
        Object {
          "type": "Uint32",
          "value": "0",
          "vname": "_scilla_version",
        },
        Object {
          "type": "ByStr20",
          "value": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
          "vname": "_this_address",
        },
      ],
      "input": "/Users/laptop3/ZilliqaNameService/contracts/scilla/simple_registrar.scilla",
      "state": Array [
        Object {
          "type": "Uint128",
          "value": "0",
          "vname": "_balance",
        },
      ],
    },
    "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8": Object {
      "address": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "balance": -888769n,
      "code": undefined,
      "init": Array [
        Object {
          "type": "ByStr20",
          "value": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
          "vname": "initialOwner",
        },
        Object {
          "type": "BNum",
          "value": "0",
          "vname": "_creation_block",
        },
        Object {
          "type": "Uint32",
          "value": "0",
          "vname": "_scilla_version",
        },
        Object {
          "type": "ByStr20",
          "value": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
          "vname": "_this_address",
        },
      ],
      "input": "/Users/laptop3/ZilliqaNameService/contracts/scilla/registry.scilla",
      "state": Array [
        Object {
          "type": "Uint128",
          "value": "0",
          "vname": "_balance",
        },
        Object {
          "type": "Map (ByStr32) (Record)",
          "value": Array [
            Object {
              "key": "0x75d7fb79d628a67a623235349c36992c89624fd6ec37ef5e1f3b9ba2bce1052d",
              "val": Object {
                "argtypes": Array [],
                "arguments": Array [
                  "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
                  "0x0000000000000000000000000000000000000000",
                ],
                "constructor": "Record",
              },
            },
            Object {
              "key": "0x0000000000000000000000000000000000000000000000000000000000000000",
              "val": Object {
                "argtypes": Array [],
                "arguments": Array [
                  "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
                  "0x0000000000000000000000000000000000000000",
                ],
                "constructor": "Record",
              },
            },
          ],
          "vname": "records",
        },
        Object {
          "type": "Map (ByStr32) (ByStr20)",
          "value": Array [
            Object {
              "key": "0x0000000000000000000000000000000000000000000000000000000000000000",
              "val": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
            },
          ],
          "vname": "approvals",
        },
        Object {
          "type": "Map (ByStr20) (List (ByStr20))",
          "value": Array [],
          "vname": "operators",
        },
        Object {
          "type": "List (ByStr20)",
          "value": Array [],
          "vname": "admins",
        },
      ],
    },
    "0xa56193e39780d268b02bf5d9387179cc7ac9884b": Object {
      "address": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "balance": 999999978103669n,
      "smartContracts": Array [
        "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
        "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
      ],
      "transactions": Array [
        "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5",
        "0x2199c041141afe9e4de9d1900a28c3659538073b66d0eedb53525a3afb142627",
        "0xc6a0ee971806205e155c2229b34fb4c60e146da684005e8618cf5b1eb04c3082",
        "0x303a0942b8338bb0ce7555926b8d44a2936b9d40a3d2ddea35100509a76364a6",
        "0x213fd294d18f8ccd99454719ef97242abfa6b5d71e2788a3e5d1264a3cb77139",
      ],
    },
  },
  "blockNumber": 0,
  "blocks": Array [],
  "currentBlock": Array [
    "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5",
    "0x2199c041141afe9e4de9d1900a28c3659538073b66d0eedb53525a3afb142627",
    "0xc6a0ee971806205e155c2229b34fb4c60e146da684005e8618cf5b1eb04c3082",
    "0x303a0942b8338bb0ce7555926b8d44a2936b9d40a3d2ddea35100509a76364a6",
    "0x213fd294d18f8ccd99454719ef97242abfa6b5d71e2788a3e5d1264a3cb77139",
  ],
  "events": Object {
    "0x1055e3f83f380244ae2ba92a2f4b3cc5d0dd814e27954321cee3bf824b5929a6": Object {
      "_eventname": "Transfered",
      "address": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "params": Array [
        Object {
          "type": "ByStr32",
          "value": "0x75d7fb79d628a67a623235349c36992c89624fd6ec37ef5e1f3b9ba2bce1052d",
          "vname": "node",
        },
        Object {
          "type": "ByStr20",
          "value": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
          "vname": "owner",
        },
      ],
    },
    "0x9a671e5cc96147ab6735ae21ebe19eaa53424cb921c03b29396a5bb838ff48ca": Object {
      "_eventname": "Error",
      "address": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
      "params": Array [
        Object {
          "type": "String",
          "value": "Not valid parent, record owner, amount or sender",
          "vname": "message",
        },
      ],
    },
    "0xb91b1fd99e7c72ffe1c5f71e96c011481f09eb53bde54b2830829f587529b1b3": Object {
      "_eventname": "NewDomain",
      "address": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "params": Array [
        Object {
          "type": "ByStr32",
          "value": "0x0000000000000000000000000000000000000000000000000000000000000000",
          "vname": "parent",
        },
        Object {
          "type": "String",
          "value": "label",
          "vname": "label",
        },
      ],
    },
    "0xe28330792789071f66770eb479dd457eaf7e2911f6d2ca94cbe02d6e9a445029": Object {
      "_eventname": "Approved",
      "address": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "params": Array [
        Object {
          "type": "ByStr20",
          "value": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
          "vname": "address",
        },
      ],
    },
  },
  "transactions": Object {
    "0x213fd294d18f8ccd99454719ef97242abfa6b5d71e2788a3e5d1264a3cb77139": Object {
      "ID": "0x213fd294d18f8ccd99454719ef97242abfa6b5d71e2788a3e5d1264a3cb77139",
      "amount": "0",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "10000",
      "gasPrice": "100",
      "meta": Object {
        "events": Array [
          "0x9a671e5cc96147ab6735ae21ebe19eaa53424cb921c03b29396a5bb838ff48ca",
        ],
      },
      "nonce": "5",
      "receipt": Object {
        "cumulative_gas": "2569",
        "epoch_num": "4",
        "success": true,
      },
      "toAddr": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "version": "30134273",
    },
    "0x2199c041141afe9e4de9d1900a28c3659538073b66d0eedb53525a3afb142627": Object {
      "ID": "0x2199c041141afe9e4de9d1900a28c3659538073b66d0eedb53525a3afb142627",
      "amount": "0",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "100000",
      "gasPrice": "100",
      "meta": Object {
        "contractAddress": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
      },
      "nonce": "2",
      "receipt": Object {
        "cumulative_gas": "9902853",
        "epoch_num": "1",
        "success": true,
      },
      "toAddr": "0x0000000000000000000000000000000000000000",
      "version": "30134273",
    },
    "0x303a0942b8338bb0ce7555926b8d44a2936b9d40a3d2ddea35100509a76364a6": Object {
      "ID": "0x303a0942b8338bb0ce7555926b8d44a2936b9d40a3d2ddea35100509a76364a6",
      "amount": "0",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "10000",
      "gasPrice": "100",
      "meta": Object {
        "events": Array [
          "0x1055e3f83f380244ae2ba92a2f4b3cc5d0dd814e27954321cee3bf824b5929a6",
          "0xb91b1fd99e7c72ffe1c5f71e96c011481f09eb53bde54b2830829f587529b1b3",
        ],
      },
      "nonce": "4",
      "receipt": Object {
        "cumulative_gas": "1055",
        "epoch_num": "3",
        "success": true,
      },
      "toAddr": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "version": "30134273",
    },
    "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5": Object {
      "ID": "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5",
      "amount": "0",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "100000",
      "gasPrice": "100",
      "meta": Object {
        "contractAddress": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      },
      "nonce": "1",
      "receipt": Object {
        "cumulative_gas": "9911759",
        "epoch_num": "0",
        "success": true,
      },
      "toAddr": "0x0000000000000000000000000000000000000000",
      "version": "30134273",
    },
    "0xc6a0ee971806205e155c2229b34fb4c60e146da684005e8618cf5b1eb04c3082": Object {
      "ID": "0xc6a0ee971806205e155c2229b34fb4c60e146da684005e8618cf5b1eb04c3082",
      "amount": "0",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "1000",
      "gasPrice": "100",
      "meta": Object {
        "events": Array [
          "0xe28330792789071f66770eb479dd457eaf7e2911f6d2ca94cbe02d6e9a445029",
        ],
      },
      "nonce": "3",
      "receipt": Object {
        "cumulative_gas": "626",
        "epoch_num": "2",
        "success": true,
      },
      "toAddr": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "version": "30134273",
    },
  },
}
`;

exports[`simple registrar users should fail to register a name if not enough balance 1`] = `
Object {
  "accounts": Object {
    "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0": Object {
      "address": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
      "balance": 0n,
      "code": undefined,
      "init": Array [
        Object {
          "type": "ByStr20",
          "value": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
          "vname": "registry",
        },
        Object {
          "type": "ByStr32",
          "value": "0x0000000000000000000000000000000000000000000000000000000000000000",
          "vname": "ownedNode",
        },
        Object {
          "type": "ByStr20",
          "value": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
          "vname": "owner",
        },
        Object {
          "type": "Uint128",
          "value": "1",
          "vname": "price",
        },
        Object {
          "type": "BNum",
          "value": "0",
          "vname": "_creation_block",
        },
        Object {
          "type": "Uint32",
          "value": "0",
          "vname": "_scilla_version",
        },
        Object {
          "type": "ByStr20",
          "value": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
          "vname": "_this_address",
        },
      ],
      "input": "/Users/laptop3/ZilliqaNameService/contracts/scilla/simple_registrar.scilla",
      "state": Array [
        Object {
          "type": "Uint128",
          "value": "0",
          "vname": "_balance",
        },
      ],
    },
    "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8": Object {
      "address": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "balance": -892733n,
      "code": undefined,
      "init": Array [
        Object {
          "type": "ByStr20",
          "value": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
          "vname": "initialOwner",
        },
        Object {
          "type": "BNum",
          "value": "0",
          "vname": "_creation_block",
        },
        Object {
          "type": "Uint32",
          "value": "0",
          "vname": "_scilla_version",
        },
        Object {
          "type": "ByStr20",
          "value": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
          "vname": "_this_address",
        },
      ],
      "input": "/Users/laptop3/ZilliqaNameService/contracts/scilla/registry.scilla",
      "state": Array [
        Object {
          "type": "Uint128",
          "value": "0",
          "vname": "_balance",
        },
        Object {
          "type": "Map (ByStr32) (Record)",
          "value": Array [
            Object {
              "key": "0x0000000000000000000000000000000000000000000000000000000000000000",
              "val": Object {
                "argtypes": Array [],
                "arguments": Array [
                  "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
                  "0x0000000000000000000000000000000000000000",
                ],
                "constructor": "Record",
              },
            },
          ],
          "vname": "records",
        },
        Object {
          "type": "Map (ByStr32) (ByStr20)",
          "value": Array [
            Object {
              "key": "0x0000000000000000000000000000000000000000000000000000000000000000",
              "val": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
            },
          ],
          "vname": "approvals",
        },
        Object {
          "type": "Map (ByStr20) (List (ByStr20))",
          "value": Array [],
          "vname": "operators",
        },
        Object {
          "type": "List (ByStr20)",
          "value": Array [],
          "vname": "admins",
        },
      ],
    },
    "0xa56193e39780d268b02bf5d9387179cc7ac9884b": Object {
      "address": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "balance": 999999979094764n,
      "smartContracts": Array [
        "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
        "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
      ],
      "transactions": Array [
        "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5",
        "0x2199c041141afe9e4de9d1900a28c3659538073b66d0eedb53525a3afb142627",
        "0xc6a0ee971806205e155c2229b34fb4c60e146da684005e8618cf5b1eb04c3082",
        "0xb91b1fd99e7c72ffe1c5f71e96c011481f09eb53bde54b2830829f587529b1b3",
      ],
    },
  },
  "blockNumber": 0,
  "blocks": Array [],
  "currentBlock": Array [
    "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5",
    "0x2199c041141afe9e4de9d1900a28c3659538073b66d0eedb53525a3afb142627",
    "0xc6a0ee971806205e155c2229b34fb4c60e146da684005e8618cf5b1eb04c3082",
    "0xb91b1fd99e7c72ffe1c5f71e96c011481f09eb53bde54b2830829f587529b1b3",
  ],
  "events": Object {
    "0x1055e3f83f380244ae2ba92a2f4b3cc5d0dd814e27954321cee3bf824b5929a6": Object {
      "_eventname": "Error",
      "address": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
      "params": Array [
        Object {
          "type": "String",
          "value": "Not valid parent, record owner, amount or sender",
          "vname": "message",
        },
      ],
    },
    "0xe28330792789071f66770eb479dd457eaf7e2911f6d2ca94cbe02d6e9a445029": Object {
      "_eventname": "Approved",
      "address": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "params": Array [
        Object {
          "type": "ByStr20",
          "value": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
          "vname": "address",
        },
      ],
    },
  },
  "transactions": Object {
    "0x2199c041141afe9e4de9d1900a28c3659538073b66d0eedb53525a3afb142627": Object {
      "ID": "0x2199c041141afe9e4de9d1900a28c3659538073b66d0eedb53525a3afb142627",
      "amount": "0",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "100000",
      "gasPrice": "100",
      "meta": Object {
        "contractAddress": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
      },
      "nonce": "2",
      "receipt": Object {
        "cumulative_gas": "9902853",
        "epoch_num": "1",
        "success": true,
      },
      "toAddr": "0x0000000000000000000000000000000000000000",
      "version": "30134273",
    },
    "0xb91b1fd99e7c72ffe1c5f71e96c011481f09eb53bde54b2830829f587529b1b3": Object {
      "ID": "0xb91b1fd99e7c72ffe1c5f71e96c011481f09eb53bde54b2830829f587529b1b3",
      "amount": "0",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "10000",
      "gasPrice": "100",
      "meta": Object {
        "events": Array [
          "0x1055e3f83f380244ae2ba92a2f4b3cc5d0dd814e27954321cee3bf824b5929a6",
        ],
      },
      "nonce": "4",
      "receipt": Object {
        "cumulative_gas": "2533",
        "epoch_num": "3",
        "success": true,
      },
      "toAddr": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "version": "30134273",
    },
    "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5": Object {
      "ID": "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5",
      "amount": "0",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "100000",
      "gasPrice": "100",
      "meta": Object {
        "contractAddress": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      },
      "nonce": "1",
      "receipt": Object {
        "cumulative_gas": "9911759",
        "epoch_num": "0",
        "success": true,
      },
      "toAddr": "0x0000000000000000000000000000000000000000",
      "version": "30134273",
    },
    "0xc6a0ee971806205e155c2229b34fb4c60e146da684005e8618cf5b1eb04c3082": Object {
      "ID": "0xc6a0ee971806205e155c2229b34fb4c60e146da684005e8618cf5b1eb04c3082",
      "amount": "0",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "1000",
      "gasPrice": "100",
      "meta": Object {
        "events": Array [
          "0xe28330792789071f66770eb479dd457eaf7e2911f6d2ca94cbe02d6e9a445029",
        ],
      },
      "nonce": "3",
      "receipt": Object {
        "cumulative_gas": "626",
        "epoch_num": "2",
        "success": true,
      },
      "toAddr": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "version": "30134273",
    },
  },
}
`;

exports[`simple registrar users should fail to register a name if not fed record 1`] = `
Object {
  "accounts": Object {
    "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0": Object {
      "address": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
      "balance": 1n,
      "code": undefined,
      "init": Array [
        Object {
          "type": "ByStr20",
          "value": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
          "vname": "registry",
        },
        Object {
          "type": "ByStr32",
          "value": "0x0000000000000000000000000000000000000000000000000000000000000000",
          "vname": "ownedNode",
        },
        Object {
          "type": "ByStr20",
          "value": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
          "vname": "owner",
        },
        Object {
          "type": "Uint128",
          "value": "1",
          "vname": "price",
        },
        Object {
          "type": "BNum",
          "value": "0",
          "vname": "_creation_block",
        },
        Object {
          "type": "Uint32",
          "value": "0",
          "vname": "_scilla_version",
        },
        Object {
          "type": "ByStr20",
          "value": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
          "vname": "_this_address",
        },
      ],
      "input": "/Users/laptop3/ZilliqaNameService/contracts/scilla/simple_registrar.scilla",
      "state": Array [
        Object {
          "type": "Uint128",
          "value": "0",
          "vname": "_balance",
        },
      ],
    },
    "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8": Object {
      "address": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "balance": 0n,
      "code": undefined,
      "init": Array [
        Object {
          "type": "ByStr20",
          "value": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
          "vname": "initialOwner",
        },
        Object {
          "type": "BNum",
          "value": "0",
          "vname": "_creation_block",
        },
        Object {
          "type": "Uint32",
          "value": "0",
          "vname": "_scilla_version",
        },
        Object {
          "type": "ByStr20",
          "value": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
          "vname": "_this_address",
        },
      ],
      "input": "/Users/laptop3/ZilliqaNameService/contracts/scilla/registry.scilla",
      "state": Array [
        Object {
          "type": "Uint128",
          "value": "0",
          "vname": "_balance",
        },
        Object {
          "type": "Map (ByStr32) (Record)",
          "value": Array [
            Object {
              "key": "0x0000000000000000000000000000000000000000000000000000000000000000",
              "val": Object {
                "argtypes": Array [],
                "arguments": Array [
                  "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
                  "0x0000000000000000000000000000000000000000",
                ],
                "constructor": "Record",
              },
            },
          ],
          "vname": "records",
        },
        Object {
          "type": "Map (ByStr32) (ByStr20)",
          "value": Array [
            Object {
              "key": "0x0000000000000000000000000000000000000000000000000000000000000000",
              "val": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
            },
          ],
          "vname": "approvals",
        },
        Object {
          "type": "Map (ByStr20) (List (ByStr20))",
          "value": Array [],
          "vname": "operators",
        },
        Object {
          "type": "List (ByStr20)",
          "value": Array [],
          "vname": "admins",
        },
      ],
    },
    "0xa56193e39780d268b02bf5d9387179cc7ac9884b": Object {
      "address": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "balance": 999999979094286n,
      "smartContracts": Array [
        "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
        "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
      ],
      "transactions": Array [
        "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5",
        "0x2199c041141afe9e4de9d1900a28c3659538073b66d0eedb53525a3afb142627",
        "0xc6a0ee971806205e155c2229b34fb4c60e146da684005e8618cf5b1eb04c3082",
        "0xb91b1fd99e7c72ffe1c5f71e96c011481f09eb53bde54b2830829f587529b1b3",
      ],
    },
  },
  "blockNumber": 0,
  "blocks": Array [],
  "currentBlock": Array [
    "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5",
    "0x2199c041141afe9e4de9d1900a28c3659538073b66d0eedb53525a3afb142627",
    "0xc6a0ee971806205e155c2229b34fb4c60e146da684005e8618cf5b1eb04c3082",
    "0xb91b1fd99e7c72ffe1c5f71e96c011481f09eb53bde54b2830829f587529b1b3",
  ],
  "events": Object {
    "0x1055e3f83f380244ae2ba92a2f4b3cc5d0dd814e27954321cee3bf824b5929a6": Object {
      "_eventname": "Error",
      "address": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
      "params": Array [
        Object {
          "type": "String",
          "value": "Not valid parent, record owner, amount or sender",
          "vname": "message",
        },
      ],
    },
    "0xe28330792789071f66770eb479dd457eaf7e2911f6d2ca94cbe02d6e9a445029": Object {
      "_eventname": "Approved",
      "address": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "params": Array [
        Object {
          "type": "ByStr20",
          "value": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
          "vname": "address",
        },
      ],
    },
  },
  "transactions": Object {
    "0x2199c041141afe9e4de9d1900a28c3659538073b66d0eedb53525a3afb142627": Object {
      "ID": "0x2199c041141afe9e4de9d1900a28c3659538073b66d0eedb53525a3afb142627",
      "amount": "0",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "100000",
      "gasPrice": "100",
      "meta": Object {
        "contractAddress": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
      },
      "nonce": "2",
      "receipt": Object {
        "cumulative_gas": "9902853",
        "epoch_num": "1",
        "success": true,
      },
      "toAddr": "0x0000000000000000000000000000000000000000",
      "version": "30134273",
    },
    "0xb91b1fd99e7c72ffe1c5f71e96c011481f09eb53bde54b2830829f587529b1b3": Object {
      "ID": "0xb91b1fd99e7c72ffe1c5f71e96c011481f09eb53bde54b2830829f587529b1b3",
      "amount": "1",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "10000",
      "gasPrice": "100",
      "meta": Object {
        "events": Array [
          "0x1055e3f83f380244ae2ba92a2f4b3cc5d0dd814e27954321cee3bf824b5929a6",
        ],
      },
      "nonce": "4",
      "receipt": Object {
        "cumulative_gas": "1475",
        "epoch_num": "3",
        "success": true,
      },
      "toAddr": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
      "version": "30134273",
    },
    "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5": Object {
      "ID": "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5",
      "amount": "0",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "100000",
      "gasPrice": "100",
      "meta": Object {
        "contractAddress": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      },
      "nonce": "1",
      "receipt": Object {
        "cumulative_gas": "9911759",
        "epoch_num": "0",
        "success": true,
      },
      "toAddr": "0x0000000000000000000000000000000000000000",
      "version": "30134273",
    },
    "0xc6a0ee971806205e155c2229b34fb4c60e146da684005e8618cf5b1eb04c3082": Object {
      "ID": "0xc6a0ee971806205e155c2229b34fb4c60e146da684005e8618cf5b1eb04c3082",
      "amount": "0",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "1000",
      "gasPrice": "100",
      "meta": Object {
        "events": Array [
          "0xe28330792789071f66770eb479dd457eaf7e2911f6d2ca94cbe02d6e9a445029",
        ],
      },
      "nonce": "3",
      "receipt": Object {
        "cumulative_gas": "626",
        "epoch_num": "2",
        "success": true,
      },
      "toAddr": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "version": "30134273",
    },
  },
}
`;
